优化style创建的性能

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,7 @@ org.gradle.parallel=true
 # Enable configure on demand.
 org.gradle.configureondemand=true
 
+jdkVersion = 11
+
+#org.gradle.java.home=/usr/local/Cellar/openjdk@8/1.8.0-422/libexec/openjdk.jdk/Contents/Home
+
